+ correct mail in footer

--- a/2/index.html
+++ b/2/index.html
@@ -58,7 +58,7 @@
 
     <footer>
       <p>Author: Yuriy Tkachenko</p>
-      <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+      <p><a href="vvxxhhxxss@gmail.com">vxxhhxxss@gmail.com</a></p>
     </footer>
 
     <script src="./js/main.js" type="module"></script>
